# rolling-crc-rs

./: Cargo.toml  README.md
examples/: basic.rs  contains.rs
src/: lib.rs  roll_crc.rs  rollcrc.rs
