# Copyright © 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "simhashr"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[dev-dependencies]
crc = "*"

[lib]
name = "simhashr"
path = "src/lib.rs"

#[[bin]]
#name = "simhashr"
#path = "src/bin/simhashr.rs"
