# Copyright © 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "rolling-crc"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[dependencies]
lazy_static = "1.0"

[dev-dependencies]
crc = "1.8"

[lib]
name = "rolling_crc"
path = "src/lib.rs"
